src/css/styles.css
@import url("https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i|Roboto:400,700");
@import url('https://fonts.googleapis.com/css?family=Bitter|Cabin');
#protograph-div {
  overflow: hidden;
}
.card-content{
  padding-left: 10px !important;
  padding-right: 10px !important;
}

.no-padding-col {
  padding: 0px !important;
}

.no-left-padding{
  padding-left: 0px !important;
}

.no-right-padding{
  padding-right: 0px !important;
}

.proto-card {
  padding-bottom: 30px;
  margin-bottom: 15px;
  width: 100%;
  display: inline-block;
  position: relative;
}
.proto-card .card-title {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  color: #333;
  line-height: 34px;
  font-size: 26px;
}
.proto-card .by-time-line {
  padding: 10px 0px;
}
.proto-card .by-time-line .by-line {
  color: #55a8fd;
  font-size: 10px;
  font-weight: 400;
  line-height: 17px;
  text-transform: uppercase;
  letter-spacing: 0.5px;
}
.proto-card .by-time-line .time-ago {
  color: #787878;
  font-size: 10px;
  line-height: 17px;
  text-transform: uppercase;
  letter-spacing: 0.5px;
}

.proto-card .card-text {
  line-height: 21px;
  color: #4a4a4a;
  font-size: 14px;
  font-weight: 400;
  font-family: "Noto Serif", serif;
  padding: 0px;
}
.proto-card .hint-text {
  font-size: 10px;
  color: #787878;
  line-height: 14px;
}
.col-3-story-card{
	background: transparent;
	height: 250px;
	width: 220px;
	position: relative;
	padding: 12px;
	box-sizing: border-box;
	overflow: hidden;
}

.col-3-story-card .article-title{
	font-size: 18px;
	color: #333;
	font-family: bitter;
	font-weight: 900;
  display: inline-block;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
	margin-top: 12px;
	margin-bottom: 12px;
	max-width: 176px;
	max-height: 125px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.col-3-story-card .by-line{
	font-size: 10px;
	color: rgba(51, 51, 51, 0.6);
	font-family: cabin;
	font-weight: 100;
	letter-spacing: 0.5px;
}

.col-4-story-card{
	background: transparent;
	height: 250px;
	width: 300px;
	position: relative;
	padding: 12px;
	box-sizing: border-box;
	overflow: hidden;
}


.col-4-story-card .article-title{
	font-size: 18px;
	color: #333;
	font-family: bitter;
  font-weight: 900;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
	display: inline-block;
	margin-top: 12px;
	margin-bottom: 12px;
	max-width: 276px;
}

.col-4-story-card .by-line{
	font-size: 10px;
	color: rgba(51, 51, 51, 0.6);
	font-family: cabin;
	font-weight: 100;
	letter-spacing: 0.5px;
}
.col-7-story-card{
	background: transparent;
	height: 250px;
	position: relative;
	width: 540px;
	padding: 12px;
	box-sizing: border-box;
  	overflow: hidden;
}


.col-7-story-card .article-title{
	font-size: 18px;
	color: #333;
	font-family: bitter;
  font-weight: 900;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
	display: inline-block;
	margin-top: 12px;
	margin-bottom: 12px;
	max-width: 516px;
}

.col-7-story-card .by-line{
	font-size: 10px;
	color: rgba(51, 51, 51, 0.6);
	font-family: cabin;
	font-weight: 100;
	letter-spacing: 0.5px;
}
.col-2-story-card{
	background: transparent;
	height: 250px;
	width: 140px;
	display: inline-block;
	float: left;
	position: relative;
	padding: 12px;
	box-sizing: border-box;
	overflow: hidden;
}

.col-2-story-card .article-title{
	font-size: 14px;
	color: #333;
	font-family: bitter;
  font-weight: 900;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
	display: inline-block;
	margin-top: 12px;
	margin-bottom: 12px;
	max-width: 116px;
	max-height: 125px;
    overflow: hidden;
    text-overflow: ellipsis;
    line-height: 19px;
}

.col-2-story-card .by-line{
	font-size: 10px;
	color: rgba(51, 51, 51, 0.6);
	font-family: cabin;
	font-weight: 100;
	letter-spacing: 0.5px;
}

.col-2-story-card .card-tags .series-name{
	background: transparent;
	padding-left: 0px;
}

.col-2-story-card .card-tags .series-name .genre{
	margin-left: 0px;
}

.col-16-story-card{
	background-image: linear-gradient(253deg, rgba(51, 51, 51, 0.2), rgba(51, 51, 51, 0.8));
	height: 430px;
	padding: 20px;
	width: 1260px;
	position: relative;
	box-sizing: border-box;
	overflow: hidden;
}

.bottom-pull-div{
	position: absolute;
	bottom: 20px;
}

.col-16-story-card .article-title{
	font-size: 32px;
	color: white;
	font-family: bitter;
  font-weight: 900;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
	display: inline-block;
	margin-top: 12px;
	margin-bottom: 12px;
	max-width: 860px;
}

.title-background{
	height: 250px;
    width: 100%;
    position: absolute;
    left: 0px;
    bottom: 0px;
    background: linear-gradient(#3360, #1d1d1d);
}

.by-line{
	font-size: 10px;
	color: white;
	font-family: cabin;
	font-weight: 100;
	letter-spacing: 0.5px;
}
.card-tags .publisher-icon{
	height: 25px;
	width: 25px;
	float: left;
	margin-right: 10px;
	border-radius: 50px;
}

.favicon{
  height: 17px;
	width: 17px;
	margin-left:4px;
	margin-top:3px;
  border-radius: 50px;
}

.card-tags .series-name{
	font-size: 10px;
	text-transform: uppercase;
	color: black;
	background: white;
	float: left;
	height: 20px;
	display: inline-block;
	padding: 1px;
	box-sizing: border-box;
	padding-left: 5px;
	border-radius: 4px;
	font-family: cabin;
	margin-top: 2px;
}

.card-tags .series-name .genre{
	font-size: 10px;
	text-transform: uppercase;
	color: white;
	background: red;
	/*float: left;*/
	line-height:15px;
	height: 18px;
	display: inline-block;
	padding: 2px 5px;
	box-sizing: border-box;
	margin-left: 3px;
	font-family: cabin;
	border-radius: 4px;
}

.card-tags .sub-genre-light{
	font-size: 12px;
	text-transform: uppercase;
	color: white;
	font-weight: 900;
	padding-top: 4px;
	display: inline-block;
	box-sizing: border-box;
	margin-left: 5px;
	font-family: cabin;
}

.card-tags .sub-genre-dark{
	font-size: 12px;
	text-transform: uppercase;
	color: #333;
	font-weight: bold;
	padding-top: 4px;
	font-style: italic;
	display: inline-block;
	box-sizing: border-box;
	margin-left: 5px;
	font-family: cabin;
}

.image-styling{
	position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: -1;
}

#ProtoScreenshot {
  width: 450px;
  padding: 10px 15px;
  height: 450px;
  overflow: hidden;
}

@media only screen and (max-width: 500px){
	.col-2-story-card{
		margin-right: 20px;
	}
	div.col-2> div:nth-of-type(even) {
	    margin-right: 0px;
  }
  .proto-grid-container {
    width: 100%;
    padding-left: 0px; }

  .col-7 {
    width: 100%; }

  .col-16 {
    width: 100%; }

  .col-4 {
    margin-left: 50%;
    transform: translate(-50%, 0); }

  .col-3 {
    width: 300px;
    margin-left: 50%;
    transform: translate(-50%, 0); }

  .col-2 {
    width: 300px;
    margin-left: 50%;
    transform: translate(-50%, 0); }

    .col-16-story-card{
        margin-top: 0px;
        width: 100%;
    }

    .col-16-story-card .article-title{
        font-size: 22px;
        max-width: 100%;
        font-weight: 600;
        line-height: 30px;
        letter-spacing: 0.5px;
        padding-right: 20px;
        margin-left: 0px;
    }

  .col-2-story-card{
		margin-right: 20px;
	}
	div.col-2> div:nth-of-type(even) {
	    margin-right: 0px;
	}
}

@media only screen and (max-width: 450px){
  .proto-card .title-text-layout .card-text {
    -webkit-column-count: 1 !important;
    -moz-column-count: 1 !important;
    column-count: 1 !important;
  }
  .proto-card .title-big-img-text-layout .card-text {
    -webkit-column-count: 1 !important;
    -moz-column-count: 1 !important;
    column-count: 1 !important;
  }
  .no-left-padding{
    padding-left: 0px !important;
    padding-right: 0px !important;
  }

  .no-right-padding{
    padding-right: 0px !important;
    padding-left: 0px !important;
  }
  .title-small-img-text-layout img{
    margin-bottom: 10px;
  }
}

